--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,15 @@ name = "aoc2024"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies]
+[[bin]]
+name = "day01"
+path = "bin/day01.rs"
+[[bin]]
+name = "day02"
+path = "bin/day02.rs"
+[[bin]]
+name = "day03"
+path = "bin/day03.rs"
+[[bin]]
+name = "day04"
+path = "bin/day04.rs"
